<resources>
    <string name="app_name">PersonAssistant</string>

    <!--MainActivity-->
    <string name="main_drawer_nav_chat">Chat</string>
    <string name="main_drawer_nav_account">Account</string>
    <string name="main_drawer_nav_schedule">Schedule</string>
    <string name="main_drawer_nav_other">Other</string>
    <string name="main_drawer_nav_communicate">Communicate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Account -->
    <string name="title_account">Add the budget</string>
    <string name="tv_account_income">Income</string>
    <string name="tv_account_spending">Spending</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="just_now">Just</string>
    <string name="minutes_ago">{count} minutes ago</string>
    <string name="hours_ago">{count} hours ago</string>
    <string name="days_ago">{count} days ago</string>
    <string name="weeks_ago">{count} weeks ago</string>
    <string name="months_ago">{count} months ago</string>
    <string name="years_ago">{count} years ago</string>
    <string name="account_save">Save</string>
    <string name="acc_add_title">Add</string>
    <string name="acc_add_save_failed">Please enter a valid amount</string>
    <string name="note_edittext_hint">note</string>

    <!--Schedule-->
    <string name="sch_add_start">Start</string>
    <string name="sch_add_end">End</string>
    <string name="sch_add_remind">Remind</string>
    <string name="sch_add_repeat">Repeat</string>
    <string name="sch_add_all_day">All Day</string>
    <string name="sch_add_note">Note</string>

    <!-- Calendar -->
    <string name="month_half_name_format" translatable="false">MMM</string>
    <string name="month_name_format" translatable="false">MMMM</string>
    <string name="day_name_format" translatable="false">EEEEE</string>
    <string name="date_and_week_format">M-d E</string>
    <string name="time_format" translatable="false">HH:mm</string>
    <string name="message_time_format">yyyy-MM-dd HH:mm:ss</string>

    <!-- Agenda -->
    <string name="agenda_event_day_duration">d</string>

    <!--undefined-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Register</string>
    <string name="action_password_again">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_other">The third party</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="checkBox_remember_pass">remember pass</string>

</resources>
