<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".ui.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/moren"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/login_edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/prompt_username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/login_edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/login_btn_login"
                    android:layout_width="92dp"
                    android:layout_height="36dp"
                    android:background="#ffffff"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/blue"></Button>

                <Button
                    android:id="@+id/login_btn_trd"
                    android:layout_width="92dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/login_btn_login"
                    android:background="#ffffff"
                    android:text="@string/action_sign_in_other"
                    android:textColor="@color/blue"></Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/login_tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/primary_text"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/login_card"
        android:layout_alignTop="@id/login_card"
        android:layout_marginEnd="-25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_add_black_24dp"
        android:transitionName="loginFab"
        app:elevation="6dp"
        app:fabSize="normal" />

</RelativeLayout>
