<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/acc_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/account_tv_title_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/title_account" />

    <LinearLayout
        android:id="@+id/acc_ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_tv_title"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acc_tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_account_income"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/acc_tv_incomeMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="0.00"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/acc_tv_spending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tv_account_spending"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/acc_tv_spendingMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0.00"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/acc_tv_title"
        android:background="@color/secondary_text"
        />
    <ImageButton
        android:id="@+id/acc_imgBtn_account"
        android:layout_width="@dimen/account_imgBtn_size"
        android:layout_height="@dimen/account_imgBtn_size"
        android:layout_marginTop="@dimen/account_imgBtn_marginTop"
        android:background="@drawable/ic_menu_camera"
        android:layout_centerHorizontal="true"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/acc_ll_top">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>