<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/acc_add_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/sch_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:navigationIcon="@drawable/ic_left_back"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_left_back"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/account_tv_title_height"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/acc_add_title"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/acc_add_appbarlayout"
        android:layout_alignParentStart="true"
        android:padding="@dimen/fab_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sch_add_edt_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height"
                android:background="@null"
                android:hint="标题" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="全天" />

                <Switch
                    android:id="@+id/sch_add_swt_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="开始" />

                <TextView
                    android:id="@+id/sch_add_tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="7月12日 周三" />

                <TextView
                    android:id="@+id/sch_add_tv_start_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/sch_add_tv_start_time"
                    android:gravity="center"
                    android:text="10：29" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="结束" />
                <TextView
                    android:id="@+id/sch_add_tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="7月12日 周三"/>

                <TextView
                    android:id="@+id/sch_add_tv_end_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/sch_add_tv_end_time"
                    android:gravity="center"
                    android:text="10：29" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="重复" />

                <TextView
                    android:id="@+id/sch_add_tv_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/next1"
                    android:text="asdasd" />
                <ImageView
                    android:id="@+id/next1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_chevron_right_black_24dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="提醒" />

                <TextView
                    android:id="@+id/sch_add_tv_remind"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/next"
                    android:text="asdasd" />
                <ImageView
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_chevron_right_black_24dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sch_add_height">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="备注" />

                <EditText
                    android:id="@+id/sch_add_edt_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/textView2"
                    android:gravity="end"
                    android:background="@null"
                    android:hint="@string/note_edittext_hint" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/acc_add_btn_save_height"
        android:text="@string/account_save"
        android:background="?attr/colorPrimary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>